--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <body>
         <main id="main-content">
             <div
-                class="pane-container test-container box-shadow"
+                class="pane-container hidden test-container box-shadow"
                 id="test-container"
             >
                 <div class="square-box">
@@ -57,7 +57,7 @@
                 </div>
             </div>
 
-            <div class="pane-container hidden box-shadow" id="start-modal">
+            <div class="pane-container box-shadow" id="start-modal">
                 <div class="pane-info">
                     <h1>
                         Let's test your internet speed.
@@ -81,7 +81,7 @@
             </div>
 
             <div
-                class="test-info-progress-container"
+                class="test-info-progress-container hidden"
                 id="info-progress-container"
             >
                 <div class="test-info-container box-shadow">
