--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <script type="text/javascript" src="scripts/ie.js"></script>
         <script
             type="text/javascript"
-            src="scripts/librespeed/speedtest.js"
+            src="speedtest.js"
         ></script>
         <script defer type="module" src="scripts/main.js"></script>
     </body>
