--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <main id="main-content">
             <div
                 class="pane-container hidden test-container box-shadow"
-                id="test-container"
+                id="test-modal"
             >
                 <div class="square-box">
                     <canvas id="test-meter"></canvas>
@@ -85,49 +85,37 @@
                 id="info-progress-container"
             >
                 <div class="test-info-container box-shadow">
-                    <div class="info">
-                        <div class="test-kind ping">
+                    <div class="info" id="ping">
+                        <div class="test-kind">
                             Latency
                         </div>
 
                         <div class="unit-container in-progress">
-                            <div
-                                id="ping-amount"
-                                class="amount"
-                                aria-label="latency"
-                            >
+                            <div class="amount" aria-label="latency">
                                 0
                             </div>
                             <div class="unit">ms</div>
                         </div>
                     </div>
 
-                    <div class="info test-icon">
-                        <div class="test-kind dl">
+                    <div class="info" id="download">
+                        <div class="test-kind">
                             Download
                         </div>
                         <div class="unit-container in-progress">
-                            <div
-                                id="dl-amount"
-                                class="amount"
-                                aria-label="download-speed"
-                            >
+                            <div class="amount" aria-label="download-speed">
                                 0
                             </div>
                             <div class="unit">Mbps</div>
                         </div>
                     </div>
 
-                    <div class="info test-icon">
-                        <div class="test-kind ul">
+                    <div class="info" id="upload">
+                        <div class="test-kind">
                             Upload
                         </div>
                         <div class="unit-container in-progress">
-                            <div
-                                id="ul-amount"
-                                class="amount"
-                                aria-label="upload-speed"
-                            >
+                            <div class="amount" aria-label="upload-speed">
                                 0
                             </div>
                             <div class="unit">Mbps</div>
@@ -148,10 +136,7 @@
         </main>
 
         <script type="text/javascript" src="scripts/ie.js"></script>
-        <script
-            type="text/javascript"
-            src="speedtest.js"
-        ></script>
+        <script type="text/javascript" src="speedtest.js"></script>
         <script defer type="module" src="scripts/main.js"></script>
     </body>
 </html>
