finishing touches. Tweaks to animations, etc.

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </div>
 
             <div
-                class="test-info-progress-container"
+                class="test-info-progress-container hidden"
                 id="info-progress-container"
             >
                 <div class="test-info-container">
@@ -85,7 +85,7 @@
 
                         <div class="unit-container in-progress">
                             <div class="amount" aria-label="latency">
-                                0.00
+                                0
                             </div>
                             <div class="unit">ms</div>
                         </div>
@@ -97,7 +97,7 @@
                         </div>
                         <div class="unit-container in-progress">
                             <div class="amount" aria-label="download-speed">
-                                00.0
+                                0
                             </div>
                             <div class="unit">Mbps</div>
                         </div>
@@ -109,7 +109,7 @@
                         </div>
                         <div class="unit-container in-progress">
                             <div class="amount" aria-label="upload-speed">
-                                00.0
+                                0
                             </div>
                             <div class="unit">Mbps</div>
                         </div>
