added error modal if not in survey

--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
     </head>
 
     <body>
+        <div class="modal">
+            <div class="pane-container pane-info modal-content">
+                <h1>Heads up!</h1>
+
+                <hr />
+
+                <p>
+                    Something went wrong and we can't progress you to the next
+                    part of the survey. Try reloading the webpage.
+                </p>
+            </div>
+        </div>
+
         <main>
             <div class="pane-container" id="start-pane">
                 <div class="pane-info">
