fixed ripple and ending anim.

--- a/index.html
+++ b/index.html
@@ -130,17 +130,15 @@
                 </div>
                 <div class="progress-bar-container" id="progress-bar"></div>
             </div>
-            
-            <div class="start-btn-container">
-                <button
-                    class="start-btn btn-prime"
-                    id="start-btn"
-                    aria-label="start-button"
-                >
-                    <div class="text">Start</div>
-                    <div class="ripple"></div>
-                </button>
-            </div>
+
+            <button
+                class="start-btn-container start-btn btn-prime"
+                id="start-btn"
+                aria-label="start-button"
+            >
+                <div class="text">Start</div>
+                <div class="ripple"></div>
+            </button>
         </main>
 
         <script type="text/javascript" src="scripts/ie.js"></script>
