re-hided info bar

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             </div>
 
             <div
-                class="test-info-progress-container"
+                class="test-info-progress-container hidden"
                 id="info-progress-container"
             >
                 <div class="test-info-container">
