--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
 
         <main>
-            <div class="pane-container" id="start-pane">
+            <div class="pane-container hidden" id="start-pane">
                 <div class="pane-info">
                     <h1>
                         Let's test your internet speed.
@@ -67,12 +67,13 @@
                 </div>
             </div>
 
-            <div class="pane-container test-container hidden" id="test-pane">
+            <div class="pane-container test-container" id="test-pane">
                 <div class="square-box">
                     <canvas class="square-box" id="test-meter"></canvas>
                 </div>
 
-                <div class="info test-icon">
+                <div class="info">
+                    
                     <div class="unit-container" id="test-amount-container">
                         <div
                             id="test-amount"
@@ -83,6 +84,8 @@
                         </div>
                         <div id="test-amount-unit" class="unit">Mbps</div>
                     </div>
+
+                    <div class="kind">↑</div>
                 </div>
             </div>
 
