--- a/index.html
+++ b/index.html
@@ -150,6 +150,6 @@
 
         <script type="text/javascript" src="scripts/ie.js"></script>
         <script type="text/javascript" src="speedtest.js"></script>
-        <script defer type="module" src="scripts/main.js"></script>
+        <script defer type="module" src="scripts/index.js"></script>
     </body>
 </html>
