--- a/sites/index.html
+++ b/sites/index.html
@@ -7,9 +7,9 @@
         />
         <meta charset="UTF-8" />
 
-        <link rel="stylesheet" href="styles/style.css" />
-        <link rel="stylesheet" href="styles/extras.css" />
-        <link rel="stylesheet" href="styles/utils.css" />
+        <link rel="stylesheet" href="../styles/style.css" />
+        <link rel="stylesheet" href="../styles/extras.css" />
+        <link rel="stylesheet" href="../styles/utils.css" />
 
         <title>speedtest.fi ⏱</title>
     </head>
@@ -74,7 +74,7 @@
 
                 <div class="info">
                     <div class="unit-info-container">
-                        <div class="header">Current Metric</div>
+                        <div class="header"></div>
                         <div class="unit-container" id="test-amount-container">
                             <div
                                 id="test-amount"
@@ -148,8 +148,10 @@
             </button>
         </main>
 
-        <script type="text/javascript" src="scripts/ie.js"></script>
-        <script type="text/javascript" src="speedtest.js"></script>
-        <script defer type="module" src="scripts/index.js"></script>
+        <script
+            type="text/javascript"
+            src="../scripts/librespeed/speedtest.js"
+        ></script>
+        <script defer type="module" src="../scripts/index.js"></script>
     </body>
 </html>
