changed type signature for dollar and index.

--- a/sites/index.html
+++ b/sites/index.html
@@ -22,8 +22,8 @@
                 <hr />
 
                 <p>
-                    Something went wrong and we can't progress you to the next
-                    part of the survey. Try reloading the webpage.
+                    Something went wrong and we can't progress you to the next part of
+                    the survey. Try reloading the webpage.
                 </p>
             </div>
         </section>
@@ -45,9 +45,8 @@
                         <br />
                         <br />
 
-                        If you'd like to skip the speed test, press the Next →
-                        button in the lower right. Otherwise, press the Start
-                        button to begin.
+                        If you'd like to skip the speed test, press the Next → button in
+                        the lower right. Otherwise, press the Start button to begin.
                     </p>
                 </div>
             </section>
@@ -61,8 +60,8 @@
                     <hr />
 
                     <p>
-                        Click the Next → button to continue, or wait to
-                        automatically progress.
+                        Click the Next → button to continue, or wait to automatically
+                        progress.
                     </p>
                 </div>
             </section>
@@ -80,23 +79,18 @@
                                 id="test-amount"
                                 class="amount"
                                 aria-label="active-test-speed"
-                            >
-                                0
-                            </div>
-                            <div id="test-amount-unit" class="unit">Mbps</div>
+                            ></div>
+                            <div id="test-amount-unit" class="unit"></div>
                         </div>
 
-                        <div class="footer">Downloading...</div>
+                        <div class="footer"></div>
                     </div>
 
                     <div class="kind">↑</div>
                 </div>
             </section>
 
-            <section
-                class="info-progress-container"
-                id="info-progress-container"
-            >
+            <section class="info-progress-container" id="info-progress-container">
                 <div class="info-container">
                     <div class="info" id="ping">
                         <div class="kind">
