--- a/sites/index.html
+++ b/sites/index.html
@@ -15,22 +15,24 @@
     </head>
 
     <body>
-        <section class="modal">
-            <div class="pane-container pane-info modal-content">
-                <h1>Heads up!</h1>
+        <div class="modal">
+            <section class="pane-container">
+                <div class="content">
+                    <h1>Heads up!</h1>
 
-                <hr />
+                    <hr />
 
-                <p>
-                    Something went wrong and we can't progress you to the next part of
-                    the survey. Try reloading the webpage.
-                </p>
-            </div>
-        </section>
+                    <p>
+                        Something went wrong and we can't progress you to the next part
+                        of the survey. Try reloading the webpage.
+                    </p>
+                </div>
+            </section>
+        </div>
 
         <main>
             <section class="pane-container hidden" id="start-pane">
-                <div class="pane-info">
+                <div class="content">
                     <h1>
                         Let's test your internet speed.
                     </h1>
@@ -52,7 +54,7 @@
             </section>
 
             <section class="pane-container hidden" id="complete-pane">
-                <div class="pane-info">
+                <div class="content">
                     <h1>
                         Speed test complete.
                     </h1>
