fixed final state (upload) logging, fixed landscape styling.

--- a/sites/index.html
+++ b/sites/index.html
@@ -89,7 +89,10 @@
                 </div>
             </section>
 
-            <section class="info-progress-container" id="info-progress-container">
+            <section
+                class="info-progress-container"
+                id="info-progress-container"
+            >
                 <div class="info-container">
                     <div class="info" id="ping">
                         <div class="header">
