--- a/sites/index.html
+++ b/sites/index.html
@@ -11,6 +11,11 @@
         <link rel="stylesheet" href="../styles/extras.css" />
         <link rel="stylesheet" href="../styles/utils.css" />
 
+        <!-- <link
+            href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap"
+            rel="stylesheet"
+        /> -->
+
         <title>speedtest.fi ⏱</title>
     </head>
 
