fixed ripple button centering, updated styling.

--- a/sites/index.html
+++ b/sites/index.html
@@ -107,9 +107,7 @@
                         </div>
 
                         <div class="unit-container in-progress">
-                            <div class="amount" aria-label="latency">
-                                &nbsp;
-                            </div>
+                            <div class="amount" aria-label="latency"></div>
                             <div class="unit">ms</div>
                         </div>
                     </div>
@@ -119,9 +117,7 @@
                             Download
                         </div>
                         <div class="unit-container in-progress">
-                            <div class="amount" aria-label="download-speed">
-                                &nbsp;
-                            </div>
+                            <div class="amount" aria-label="download-speed"></div>
                             <div class="unit">Mbps</div>
                         </div>
                     </div>
@@ -131,9 +127,7 @@
                             Upload
                         </div>
                         <div class="unit-container in-progress">
-                            <div class="amount" aria-label="upload-speed">
-                                &nbsp;
-                            </div>
+                            <div class="amount" aria-label="upload-speed"></div>
                             <div class="unit">Mbps</div>
                         </div>
                     </div>
@@ -142,7 +136,7 @@
             </section>
 
             <button
-                class="start-btn-container start-btn btn-prime"
+                class="start-btn btn-prime"
                 id="start-btn"
                 aria-label="start-button"
             >
