added 'current amount', more minifying

--- a/sites/index.html
+++ b/sites/index.html
@@ -52,8 +52,7 @@
                         <br />
                         <br />
 
-                        If you'd like to skip the speed test, press the Next → button in
-                        the lower right. Otherwise, press the Start button to begin.
+                        Press the Start button to begin.
                     </p>
                 </div>
             </section>
@@ -80,7 +79,7 @@
 
                 <div class="info-container">
                     <div class="info">
-                        <div class="header"></div>
+                        <div class="header">Current Amount</div>
 
                         <div class="unit-container">
                             <div class="amount" aria-label="active-test-speed">
@@ -89,7 +88,7 @@
                             <div class="unit">&nbsp;</div>
                         </div>
 
-                        <div class="footer">&nbsp;</div>
+                        <div class="footer">Waiting...</div>
                     </div>
 
                     <div class="kind">&nbsp;</div>
