--- a/sites/index.html
+++ b/sites/index.html
@@ -36,7 +36,7 @@
         </div>
 
         <main>
-            <section class="pane-container hidden" id="start-pane">
+            <section class="pane-container" id="start-pane">
                 <div class="content">
                     <h1>
                         Let's test your internet speed.
@@ -72,7 +72,7 @@
                 </div>
             </section>
 
-            <section class="pane-container speedtest-container">
+            <section class="pane-container speedtest-container hidden">
                 <div class="speedtest square-box">
                     <canvas class="square-box" id="meter"></canvas>
                 </div>
@@ -96,7 +96,7 @@
             </section>
 
             <section
-                class="info-progress-container"
+                class="info-progress-container hidden"
                 id="info-progress-container"
             >
                 <div class="info-container">
