changed unit sizing and margin, fixed start button sizing and margin

--- a/sites/index.html
+++ b/sites/index.html
@@ -66,8 +66,7 @@
                     <hr />
 
                     <p>
-                        Click the Next → button to continue, or wait to automatically
-                        progress.
+                        Click the Next → button to continue.
                     </p>
                 </div>
             </section>
@@ -79,7 +78,7 @@
 
                 <div class="info-container">
                     <div class="info">
-                        <div class="header">Current Amount</div>
+                        <div class="header"></div>
 
                         <div class="unit-container">
                             <div class="amount" aria-label="active-test-speed">
