--- a/sites/keyframes.html
+++ b/sites/keyframes.html
@@ -8,8 +8,10 @@
         <link rel="stylesheet" href="../styles/keyframes.css" />
     </head>
     <body>
-        <div class="box">
-            hi
+        <div class="box-container">
+            <div class="box">
+                hi
+            </div>
         </div>
         <script type="module" src="../scripts/keyframes.js"></script>
     </body>
