--- a/sites/keyframes.html
+++ b/sites/keyframes.html
@@ -9,8 +9,13 @@
     </head>
     <body>
         <div class="box-container">
+            <div class="box" id="box1">
+                box1
+            </div>
+        </div>
+        <div class="box-container" id="box2">
             <div class="box">
-                hi
+                box2
             </div>
         </div>
         <script type="module" src="../scripts/keyframes.js"></script>
