Re-added splice for color.js.
Fixed toggleHeight issue.

--- a/sites/index.html
+++ b/sites/index.html
@@ -105,7 +105,7 @@
                         </div>
 
                         <div class="unit-container in-progress">
-                            <div class="amount" aria-label="latency"></div>
+                            <div class="amount" aria-label="latency">&nbsp;</div>
                             <div class="unit">ms</div>
                         </div>
                     </div>
@@ -115,7 +115,7 @@
                             Download
                         </div>
                         <div class="unit-container in-progress">
-                            <div class="amount" aria-label="download-speed"></div>
+                            <div class="amount" aria-label="download-speed">&nbsp;</div>
                             <div class="unit">Mbps</div>
                         </div>
                     </div>
@@ -125,7 +125,7 @@
                             Upload
                         </div>
                         <div class="unit-container in-progress">
-                            <div class="amount" aria-label="upload-speed"></div>
+                            <div class="amount" aria-label="upload-speed">&nbsp;</div>
                             <div class="unit">Mbps</div>
                         </div>
                     </div>
