Removed emoji from the site title.

--- a/sites/index.html
+++ b/sites/index.html
@@ -16,7 +16,7 @@
             rel="stylesheet"
         /> -->
 
-        <title>speedtest.fi ⏱</title>
+        <title>speedtest.fi</title>
     </head>
 
     <body>
