--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
         />
         <meta charset="UTF-8" />
 
+        <link rel="icon" href="@assets/cube.png" />
+
         <script type="module">
             import { createApp } from "vue";
             import App from "./App.vue";
