--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
         />
         <meta charset="UTF-8" />
 
-        <link rel="icon" href="@assets/cube.png" />
+        <link rel="icon" href="../assets/cube.png" />
 
         <script type="module">
             import { createApp } from "vue";
